--- a/templates/car.html
+++ b/templates/car.html
@@ -5,7 +5,7 @@
 
 
             <h1>CARS</h1>
-            <p>This is very serious medical issue which people can't resist</p>
+            <p>Get your perfect car price here</p>
 
         </div>
     </div>
