--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -5,7 +5,7 @@
 
 
             <h1>Insurance</h1>
-            <p>This is very serious medical issue which people can't resist</p>
+            <p>Your Health is the first Priority </p>
 
         </div>
     </div>
