--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MACHINE LEARNING</title>
+    <title>Prediction Website</title>
     <link href="{{ url_for('static',filename='css/style.css')}}" rel="stylesheet"/>
 
 
@@ -19,7 +19,7 @@
                 <li>
 
                     <a href=" / ">
-                        <b>WEBSITE NAME</b> </a>
+                        <b>Prediction Website</b> </a>
                 </li>
                 <li>
                     <a href="/">HOME</a>
