--- a/templates/carbon.html
+++ b/templates/carbon.html
@@ -5,7 +5,7 @@
 
 
             <h1>CO2 Emission</h1>
-            <p>This is very serious medical issue which people can't resist</p>
+            <p>This is very serious issue which people can't avoid</p>
 
         </div>
     </div>
