Updated title color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,7 +82,7 @@ body {
 }
 
 .field-title {
-    background-color: #EEA47FFF;
+    background-color:#801e0a;
     display: block;
     padding: 20px;
     width: 300px;
